End of night commit

--- a/src/TODO
+++ b/src/TODO
@@ -1,6 +1,6 @@
 * Impliment search
-* Impliment mark system to keep track of newlines
-* Impliment mark system for returning current line
+DONE Impliment mark system to keep track of newlines
+DONE Impliment mark system for returning current line
 * Impliment check so that cursor can't move right or down if text does not exist for that point
 * Impliment Overstrike mode functionality
 * Impliment file load into buffer
